# Apolo11

./: .gitignore  README.md  app.py  demo.py  main.py  prueba.py  pyproject.toml  setup.cfg
Files/: Prueba1.txt  hola.txt  json_.txt  separado_comas.txt
Files/Devices/: Apolo11 - Acceso directo.lnk
setting/: configuration_file.yaml  message.yaml  seting.json
settings/: configuration_file.yaml  constants_properties.yaml  message.yaml
src/Simulator/: simulator.py
src/dashboard/: process.py
src/model/: message.py  misions.py
src/simulator/: simulator.py
src/utilities/: config.py  control_messages.py  files.py  generic.py  returns.py
src/utilities/loggin/: logger_apolo11.py
src/utilities/logging/: logger_apolo11.py
tests/: conftest.py  demo.py  inicilizar.py  test_e.py
tests/1.utilities/: test_files.py
tests/3.dashboard/: test_process.py
tests/dashboard/: test_process.py
tests/simulator/: test_simulator.py
tests/utilities/: test_files.py  test_generic.py
